@@ -15,7 +15,20 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgs>
+						<arg>--add-reads</arg>
+						<arg>datamodule=ALL-UNNAMED</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-reads datamodule=ALL-UNNAMED</argLine>
+				</configuration>
 			</plugin>
 	        <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -33,7 +46,7 @@
 			<dependency>
 				<groupId>io.modelcontextprotocol.sdk</groupId>
 				<artifactId>mcp-bom</artifactId>
-				<version>0.12.1</version>
+				<version>0.17.2</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
